2002-03-12  Dominik Reichardt <gigdr@tesionmail.de>
	* faq.txt, content/faq.dat: version updated+other small updates
	
2002-03-11  Dominik Reichardt <gigdr@tesionmail.de>
	* download.php: added /snapshot/pentagram where all the stuff for Pentagram 
	  download is storeed

2002-03-10  Dominik Reichardt <gigdr@tesionmail.de>
	* download.php, content/download.dat, templates/download.tpl : Added Pentagram to Downloads

2002-03-08  Dominik Reichardt <gigdr@tesionmail.de>
	* faq.txt updated
	* docs.txt added
	* content/docs.dat,faq.dat: updated
	* content/links.dat added the link to Ultima: The Reconstruction

2002-01-16  Max Horn  <max@quendi.de>
	* qipcounter.php3: removed
	* content/download.dat: added win32 exult studio snapshot
	* base.inc: removed call to counter code (not used anyway)

2002-01-11  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* content/news.dat: weekly update

2002-01-07  Dominik Reichardt <gigdr@tesionmail.de>
	* faq.txt updated
	* content/docs.dat,faq.dat: updated
	* images/sfbug.jpg: added to show the checkbox to upload files

2002-01-10  Max Horn  <max@quendi.de>
	* Initial checkin
