@@ -1,32 +1,45 @@
 <?php
-// FIX ME - this is a bit quirky solution, but well... ;)
-add_download("exult-0.96beta1.tar.gz", "Source (.tar.gz)", 1168);
-add_download("exult-0.96beta1-1.src.rpm", "Source RPM", 1204);
-add_download("exult-0.96beta1-1.i386.rpm", "Linux Intel RedHat 7.2 Binary RPM", 860);
-add_download("exult_0.96beta1-1_i386.deb", "Linux Intel Debian Woody Binary DEB", 864);
-add_download("exult-0.96beta1-win32.exe", "Windows (95/98/ME/NT/2000/XP) Binary", 1828);
-add_download("exult-0.96beta1.x86.beos.zip", "BeOS x86 Binary", 1281);
-add_download("exult-0.96beta1.sit", "MacOS Binary", 843);
-add_download("exult-0.96beta1.openbsd-2.9.tar.gz", "OpenBSD 2.9 Binary", 1215);
-//add_download("exult-0.96beta1.dmg.gz", "MacOS X binary", 1026);
+begin_section("Official - v0.98rc1");
+ add_extern_entry("exult-0.98rc1.tar.gz", "Source (.tar.gz)", 1338);
+ add_extern_entry("exult_0.98rc1-1_i386.deb", "Linux Intel Debian Sid Binary", 994);
+ add_extern_entry("exult-0.98rc1-win32.exe", "Windows (95/98/ME/NT/2000/XP) Binary", 1901);
+ add_extern_entry("exult-0.98rc1.sit", "MacOS Binary", 859);
+ add_extern_entry("exult-0.98rc1.dmg", "MacOS X binary", 1366);
+end_section();
+
 
 // older release stuff
-add_download2("exult_0.93-alpha4_alpha.deb", "Alpha GNU/Linux Debian package (0.93alpha4)", 990);
-add_download2("exult_0.93-alpha4-freebsd4.2.tar.gz", "FreeBSD (0.93alpha4)", 797);
-add_download2("exult_0.94alpha5-5_alpha.deb", "Linux Alpha Binary DEB for EV56 and later<br>(0.94alpha5, DEC CXX build)", 1125);
-add_download2("exult-0.94alpha5-6.alpha.rpm", "Linux Alpha Binary RPM for EV56 and later<br>(0.94alpha5, DEC CXX build)", 1126);
+begin_section("Older releases");
+ add_extern_entry("exult-0.96beta1-1.src.rpm", "Source RPM (0.96beta1)", 1204);
+ add_extern_entry("exult-0.96beta1-1.i386.rpm", "Linux Intel RedHat 7.2 Binary RPM (0.96beta1)", 860);
+ add_extern_entry("exult-0.96beta1.x86.beos.zip", "BeOS x86 Binary (0.96beta1)", 1281);
+ add_extern_entry("exult-0.96beta1.openbsd-2.9.tar.gz", "OpenBSD 2.9 Binary (0.96beta1)", 1215);
+ add_extern_entry("exult_0.93-alpha4_alpha.deb", "Alpha GNU/Linux Debian package (0.93alpha4)", 990);
+ add_extern_entry("exult_0.93-alpha4-freebsd4.2.tar.gz", "FreeBSD (0.93alpha4)", 797);
+ add_extern_entry("exult_0.94alpha5-5_alpha.deb", "Linux Alpha Binary DEB for EV56 and later<br>(0.94alpha5, DEC CXX build)", 1125);
+ add_extern_entry("exult-0.94alpha5-6.alpha.rpm", "Linux Alpha Binary RPM for EV56 and later<br>(0.94alpha5, DEC CXX build)", 1126);
+end_section();
 
-add_snapshot("Changelog", "Changelog");
-add_snapshot("Exultwin32.exe", "Windows 9x/ME/NT/2000 binary snapshot");
-add_snapshot("Exult.zip", "Exult CVS source code snapshot");
-add_snapshot("ExultTools.exe", "Exult Win32 Tools snapshot ");
-add_snapshot("PhotoshopShapePlugin.zip", "Photoshop Plugin");
-add_snapshot("ExultStudio.exe", "Exult Studio (work in progress)");
+// datafiles
+begin_section("Additional Data files (not required)");
+ add_extern_entry("jmsfx.zip", "Sound pack for Black Gate", 4667);
+ add_extern_entry("jmsfxsi.zip", "Sound pack for Serpent Isle", 6050);
+end_section();
 
-add_pentagram("pentagram/Changelog", "Changelog");
-add_pentagram("pentagram/Pentagram.zip", "Pentagram CVS source code snapshot");
-add_pentagram("pentagram/Pentagramwin32.exe", "Windows 9x/ME/NT/2000 binary snapshot");
+// snapshots
+begin_section("Snapshots - use at your own risk!");
+ add_local_entry("Changelog", "Changelog");
+ add_local_entry("Exultwin32.exe", "Windows 9x/ME/NT/2000 binary snapshot");
+ add_local_entry("Exult.zip", "Exult CVS source code snapshot");
+ add_local_entry("ExultTools.exe", "Exult Win32 Tools snapshot ");
+ add_local_entry("PhotoshopShapePlugin.zip", "Photoshop Plugin");
+ add_local_entry("ExultStudio.exe", "Exult Studio (work in progress)");
+end_section();
 
-add_datafile("jmsfx.zip", "Sound pack for Black Gate", 4667);
-add_datafile("jmsfxsi.zip", "Sound pack for Serpent Isle", 6050);
+// pentagram
+begin_section("Pentagram - Experimental map and shapes viewer for Ultima 8");
+ add_local_entry("pentagram/Changelog", "Changelog");
+ add_local_entry("pentagram/Pentagram.zip", "Pentagram CVS source code snapshot");
+ add_local_entry("pentagram/Pentagramwin32.exe", "Windows 9x/ME/NT/2000 binary snapshot");
+end_section();
 ?>
