@@ -1,0 +1,7 @@
+<tr>
+	<td colspan="2"><b>{SECTION_TITLE}</b></td>
+	<td width="10"></td>
+	<td></td>
+</tr>
+{SECTION_ENTRIES}
+<tr><td width="10">&nbsp;</td><td></td><td width="10"></td><td></td></tr>
